# unity-old

./: .gitignore  .gitmodules  .travis.yml  NOTICE  NOTICE-3RD-PARTY  README.md  appveyor.yml  docker-clean.cmd  docker-install.cmd  package.json  pom.xml
api/: .project  pom.xml
cli/: .project  Untitled.ipynb  pom.xml  test.jq  test.ts
cli/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
client/: .project  pom.xml
core/: .project  pom.xml
distro/: .project  pom.xml
distro/docker/: .project  pom.xml
distro/nodejs/: .project  pom.xml
distro/server/: .project  pom.xml
distros/: .project  pom.xml
distros/cloud/: .project  pom.xml
distros/node/: .project  pom.xml
modules/: pom.xml
modules/analysis/: .project  package.json  pom.xml
modules/analytics/: .project  package.json  pom.xml
modules/engine-basex/: package.json  pom.xml
modules/engine-zorba/: package.json  pom.xml
modules/engine-zorba/src/main/c++/: CMakeLists.txt  ZorbaDGScriptContext.cpp
modules/engines/: .project  pom.xml
modules/language-ampl/: package.json  pom.xml
modules/language-jsoniq/: package.json  pom.xml
modules/languages/: .project  pom.xml
modules/learning/: .project  package.json  pom.xml
modules/numerics/: .project  package.json  pom.xml
modules/optimization/: .project  package.json  pom.xml
modules/random/: .project  package.json  pom.xml
modules/search/: .project  package.json  pom.xml
modules/statistics/: .project  package.json  pom.xml
modules/symbolics/: .project  package.json  pom.xml
modules/visualization/: pom.xml  (+2 more)
server/: .project  pom.xml
(+396 files in other folders)
